--- a/src/App.sass
+++ b/src/App.sass
@@ -38,34 +38,41 @@ $clearBlue: #1a83ff
     background-color: $darkBlue
     width: 250px
     height: 100vh
-    display: flex
-    justify-content: center
     position: fixed
-    top: 0
-    // left: -100%
-    transition: 850ms
+    top: 10
+    left: -9.5rem
+    transition: 250ms
 
-.nav-menu-active
-    left: 0
-    transition: 350ms
+.nav-menu.active
+    left: 0rem
+    transition: 250ms
+
 
 .nav-text
     display: flex
-    justify-content: start
-    padding: 8px 0px 8px 16px
+    flex-direction: column
+    align-items: center
+    padding: 8px 0px 8px 0px
     list-style: none
     height: 60px
-
+    
 .nav-text a
     text-decoration: none
     color: #f5f5f5
     font-size: 18px
-    width: 95%
+    width: 80%
     height: 100%
     display: flex
     align-items: center
-    padding: 0 16px
+    padding: 0 25px
     border-radius: 4px
+
+.nav-text-closed a
+    justify-content: center
+    width: 5%
+    display: flex
+    align-self: center
+    margin-right: -10rem
 
 .nav-text a:hover
     background-color: $clearBlue
