--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,5 @@
 //Importo fuente de estilo
-@import 'http://fonts.googleapis.com/css2?family=Lato&display=swap'
+@import url('http://fonts.googleapis.com/css2?family=Lato&display=swap')
 
 // Formatos comunes
 *
@@ -9,84 +9,16 @@
     font-family: 'Lato', sans-serif
 
 // Estilo personalizado para las vistas enrutadas
-.home, .customers, .products
-    display: flex
-    height: 90vh
-    align-items: center
-    justify-content: center
-    font-size: 3rem
+
 
 // Variables comunes de estilo
 $darkBlue: #060b26
 $clearBlue: #1a83ff
 
-// Estilos para el Navbar
-.navbar
-    background-color: $darkBlue
-    height: 80px
-    display: flex
-    justify-content: start
-    align-items: center
+h1,h2
+    margin: 0!important
+    padding: 0!important
 
-.menu-bars
-    margin-left: 2rem
-    font-size: 2rem
-    background: none
-    color: $clearBlue
-
-.nav-menu
-    background-color: $darkBlue
-    width: 250px
-    height: 100vh
-    position: fixed
-    top: 10
-    left: -9.5rem
-    transition: 250ms
-
-.nav-menu.active
-    left: 0rem
-    transition: 250ms
-
-
-.nav-text
-    display: flex
-    flex-direction: column
-    align-items: center
-    padding: 8px 0px 8px 0px
-    list-style: none
-    height: 60px
-    
-.nav-text a
-    text-decoration: none
-    color: #f5f5f5
-    font-size: 18px
-    width: 80%
-    height: 100%
-    display: flex
-    align-items: center
-    padding: 0 25px
-    border-radius: 4px
-
-.nav-text-closed a
-    justify-content: center
-    width: 5%
-    display: flex
-    align-self: center
-    margin-right: -10rem
-
-.nav-text a:hover
-    background-color: $clearBlue
-
-.nav-menu-items
-    width: 100%
-
-.navbar-toggle
-    background-color: $darkBlue
-    width: 100%
-    height: 80px
-    display: flex
-    justify-content: start
-    align-items: center
-
-span
-    margin-left: 16px
+//Tamaños de pantalla
+$mobile: 720px
+$desktop: 721px
