Refactorizado del estilo visual del proyecto

--- a/src/App.sass
+++ b/src/App.sass
@@ -8,12 +8,14 @@
     padding: 0
     font-family: 'Lato', sans-serif
 
+// colores usados en proyecto
+$grey: #e6e6e6
+$red:  #c42727
+$bodyHeight: 83vh
+$bodyTemplateRows: 70px 1fr
+$bodyTemplateColumns: 1fr
+
 // Estilo personalizado para las vistas enrutadas
-
-
-// Variables comunes de estilo
-$darkBlue: #060b26
-$clearBlue: #1a83ff
 
 h1,h2
     margin: 0!important
@@ -22,3 +24,15 @@ h1,h2
 //Tamaños de pantalla
 $mobile: 720px
 $desktop: 721px
+
+// Formato para el footer
+
+footer > div
+    height: 100%
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: flex-end
+    padding-right: 1rem
+    font-size: .8rem
+    font-weight: bolder
