--- a/src/components/Navbar.sass
+++ b/src/components/Navbar.sass
@@ -1,27 +1,33 @@
 @import ../App
 
-// Estilos para el Navbar
-.navbar
-    background-color: $darkBlue
-    height: 80px
+.navbar-div
+    height: 100px
     display: flex
-    justify-content: flex-start
+    flex-direction: row
+    justify-content: space-between
     align-items: center
+    align-self: center
 
 .menu-bars
-    margin-left: 2rem
+    margin-left: 2.5rem
     font-size: 2rem
     background: none
-    color: $clearBlue
+    color: black
+
+.menu-bars :hover
+    color: black
+
 
 .nav-menu
-    background-color: $darkBlue
-    width: 250px
+    background-color: white
+    width: 240px
     height: 100vh
     position: fixed
-    top: 10
+    justify-content: center
+    display: flex
     left: -9.5rem
     transition: 250ms
+    padding-top: 50px
 
 .nav-menu.active
     left: 0rem
@@ -38,14 +44,16 @@
     
 .nav-text a
     text-decoration: none
-    color: #f5f5f5
+    color: black
     font-size: 18px
-    width: 80%
+    width: 71%
     height: 100%
     display: flex
     align-items: center
     padding: 0 25px
     border-radius: 4px
+
+
 
 .nav-text-closed a
     justify-content: center
@@ -55,13 +63,14 @@
     margin-right: -10rem
 
 .nav-text a:hover
-    background-color: $clearBlue
+    background-color: black
+    color: white
+    text-decoration: none
 
 .nav-menu-items
     width: 100%
 
 .navbar-toggle
-    background-color: $darkBlue
     width: 100%
     height: 80px
     display: flex
