Maquetado componente para crear nuevo cliente

--- a/src/pages/customerNew.sass
+++ b/src/pages/customerNew.sass
@@ -23,9 +23,12 @@
     display: flex
     justify-content: center
     padding-top: 4rem
-    background-color: red
+    border: 1px solid $grey
     margin-left: 88px
     
 
 .form-style
     width: 450px
+
+.button-container
+    width: 100%
