Maquetado tabla para listado clientes

--- a/src/pages/customers.sass
+++ b/src/pages/customers.sass
@@ -17,13 +17,15 @@
     justify-content: space-around
     align-items: center
     
-
-main
+.main
     grid-area: main
     height: 100%
     display: flex
     justify-content: center
     padding-top: 4rem
-    background-color: red
+    border: 1px solid $grey
     margin-left: 88px
+
+.texto-cabecera
+    color: black !important
     
