--- a/src/pages/customerNew.sass
+++ b/src/pages/customerNew.sass
@@ -17,7 +17,7 @@
     justify-content: space-around
     align-items: center
 
-.main
+.main-form
     grid-area: main
     height: 100%
     display: flex
@@ -30,5 +30,3 @@
 .form-style
     width: 450px
 
-.button-container
-    width: 100%
