--- a/src/components/customer.sass
+++ b/src/components/customer.sass
@@ -1,15 +1,14 @@
 tr,td
     height: 20px!important
-    line-height: .1
+    line-height: .5
     font-size: .7rem
 
-tr :nth-child(1)
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    align-self: center
+button
+    margin: 0!important
+    padding: .1rem!important
 
-
-.customers-overflow
-    overflow-x: auto
+td
+    vertical-align: middle!important
+    margin: 0!important
+    padding: .3rem!important
+    padding-left: 5rem!important
