Proceso de edición de cliente terminado

--- a/src/pages/customers.sass
+++ b/src/pages/customers.sass
@@ -21,7 +21,13 @@
     grid-area: main
     height: 100%
     display: flex
-    justify-content: center
+    flex-direction: column
+    align-content: center
     padding-top: 4rem
-    border: 1px solid $grey
     margin-left: 88px
+
+.new-table
+    height: 100px
+    width: 100%
+    background-color: red
+    border: 10px solid yellow
