Terminada la parte visual de clientes, revisada parte visual nuevo cliente y editar cliente

--- a/src/components/Navbar.sass
+++ b/src/components/Navbar.sass
@@ -1,4 +1,4 @@
-@import ../App
+@import ../commonStyles
 
 .navbar-div
     height: 100px
@@ -25,9 +25,9 @@
     position: fixed
     justify-content: center
     display: flex
-    left: -9.5rem
-    transition: 250ms
-    padding-top: 50px
+    left: -15rem
+    transition: 550ms
+    padding-top: 50px        
 
 .nav-menu.active
     left: 0rem
@@ -55,12 +55,12 @@
 
 
 
-.nav-text-closed a
-    justify-content: center
-    width: 5%
-    display: flex
-    align-self: center
-    margin-right: -10rem
+// .nav-text-closed a
+//     justify-content: center
+//     width: 5%
+//     display: flex
+//     align-self: center
+//     margin-right: -10rem
 
 .nav-text a:hover
     background-color: black
@@ -69,6 +69,7 @@
 
 .nav-menu-items
     width: 100%
+    
 
 .navbar-toggle
     width: 100%
