--- a/src/pages/customers.sass
+++ b/src/pages/customers.sass
@@ -1,33 +1,39 @@
-@import ../App
+@import ../commonStyles
 
 // contenedor 
 .main-container
     display: grid
     height: $bodyHeight
     grid-template-areas: "header" "main"
-    grid-template-rows: $bodyTemplateRows
-    grid-template-columns: $bodyTemplateColumns
+    grid-template-rows: 70px 1fr
+    grid-template-columns: 1fr
+    justify-content: center
+    align-items: center
     
 .header
     grid-area: header
-    margin-left: 88px
     display: flex
     height: 100%
     flex-direction: row
     justify-content: space-around
     align-items: center
-    
+    padding: 20%
+
+.button-new
+    padding-right: 1.2em!important
+
 .main
     grid-area: main
-    height: 100%
     display: flex
+    height: 100%
     flex-direction: column
-    align-content: center
-    padding-top: 4rem
-    margin-left: 88px
+    justify-content: flex-start
+    align-items: center
+    margin-top: 1rem
+   
 
-.new-table
-    height: 100px
-    width: 100%
-    background-color: red
-    border: 10px solid yellow
+ 
+
+
+
+
