--- a/src/components/customer.sass
+++ b/src/components/customer.sass
@@ -15,6 +15,7 @@
     @media screen and ( max-width: $mobile )
         flex-direction: column
         max-width: 300px
+        padding: 0em 0em 0em 0em
 
 .customer-info
     dislay: flex
