Maquetados errores en products y customers

--- a/src/pages/products.sass
+++ b/src/pages/products.sass
@@ -28,8 +28,12 @@
     height: 100%
     flex-direction: column
     justify-content: flex-start
+    width: 100%
     align-items: center
     margin-top: 1rem
+
+.alert
+    width: 400px
    
 
  
